manifests/kubernetes/install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microapplication-webhook
spec:
  finalizers:
  - kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: microapplication-webhook
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
      - name: server
        image: quay.io/shbose/test:microapplication-admission
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
          name: webhook-api
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /run/secrets/tls
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: webhook-server-tls
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: microapplication-webhook
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io
kind: MutatingWebhookConfiguration
metadata:
  name: microapplication-webhook
webhooks:
  - name: webhook-server.microapplication-webhook.svc
    clientConfig:
      service:
        name: webhook-server
        namespace: microapplication-webhook
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyakNDQWNJQ0NRQ0xjRzVseldtVmREQU5CZ2txaGtpRzl3MEJBUXNGQURBdk1TMHdLd1lEVlFRRERDUkIKWkcxcGMzTnBiMjRnUTI5dWRISnZiR3hsY2lCWFpXSm9iMjlySUVSbGJXOGdRMEV3SGhjTk1qRXdOREV5TURReQpPVFEzV2hjTk1qRXdOVEV5TURReU9UUTNXakF2TVMwd0t3WURWUVFERENSQlpHMXBjM05wYjI0Z1EyOXVkSEp2CmJHeGxjaUJYWldKb2IyOXJJRVJsYlc4Z1EwRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRQzlIb1pnNGl2bkkzREQyd0d4VHB1NFlYYitBQTVaNFNpV3JvUmlPc0tIcnY2Rk5lWUpPZXorYWp3bwpaSlVDTUp2T2U2 [...]
    rules:
      - operations: [ "UPDATE" ]
        apiGroups: ["argoproj.io"]
        apiVersions: ["v1alpha1"]
        resources: ["microapplications"]
      - operations: [ "CREATE" ]
        apiGroups: ["argoproj.io"]
        apiVersions: ["v1alpha1"]
        resources: ["microapplications"]
